# ToDO

./: .env  .env.example  .envLOCAL  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  settings.py  tst.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 120fb4564d76_add_refresh_sessions.py  4117d4c0e945_change_type.py  6922dfb9912d_init_tables.py  cb8278c79c3c_first_migration_version.py  d787b305b244_reset_changes.py  d7d8da47914a_add_age_column_to_users_table.py
api/: auth.py  dependencies.py  dto.py  errors.py  exceptions_handlers.py  jwt_utils.py  router.py
api/endpoints/: auth_endpoints.py  task_endpoints.py  user_endpoints.py
db/: init_db.py  session.py
home/: index.html
logger/: logger.py
models/: models.py
repository/: auth_Repository.py  auth_exceptions.py  auth_repository.py  exceptions.py  repository.py  task_Repository.py  task_exceptions.py  user_Repository.py  user_exceptions.py
schemas/: schemas.py
services/: auth_exceptions.py  auth_service.py  consumer.py  exceptions.py  producer.py  task_exceptions.py  task_service.py  user_exceptions.py  user_service.py
tests/: conftest.py  test_auth_service.py  test_endpoints.py  test_repository.py  test_repository_auth.py  test_services.py
